Closed Bug 1214762 Opened 10 years ago Closed 10 years ago

[CID 1078808] leaked_storage: Variable salt going out of scope leaks the storage it points to

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(firefox44 affected)

RESOLVED FIXED
Tracking Status
firefox44 --- affected

People

(Reporter: franziskus, Assigned: franziskus)

References

(Blocks 1 open bug)

Details

(Keywords: coverity)

salt and other variables have to be freed in loser
Flags: needinfo?(martin.thomson)
Flags: needinfo?(ekr)
Status: NEW → RESOLVED
Closed: 10 years ago
Flags: needinfo?(martin.thomson)
Flags: needinfo?(ekr)
Resolution: --- → FIXED
Target Milestone: --- → 3.21
This broke the build on two Windows machines, because it declares a variable after a an assignment. I've checked in the obvious bustage fix. https://hg.mozilla.org/projects/nss/rev/f1a84b2a75af
I missed that there were additional declarations. I landed another bustage fix: https://hg.mozilla.org/projects/nss/rev/1f5f1501b8c4
You need to log in before you can comment on or make changes to this bug.