Bug 1214762, obvious bustage fix, variable declarations must go first.